--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,12 @@
     <repository>
       <id>maven.jenkins-ci.org</id>
       <name>jenkinsci-releases</name>
-      <url>http://repo.jenkins-ci.org/releases</url>
+      <url>https://repo.jenkins-ci.org/releases</url>
     </repository>
     <snapshotRepository>
       <id>maven.jenkins-ci.org</id>
       <name>jenkinsci-snapshots</name>
-      <url>http://repo.jenkins-ci.org/snapshots</url>
+      <url>https://repo.jenkins-ci.org/snapshots</url>
     </snapshotRepository>
   </distributionManagement>
 
@@ -57,19 +57,19 @@
   <repositories>
     <repository>
       <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
+      <url>https://repo.jenkins-ci.org/public/</url>
     </repository>
     <repository>
       <id>jgit-repository</id>
       <name>Eclipse JGit Repository</name>
-      <url>http://download.eclipse.org/jgit/maven</url>
+      <url>https://download.eclipse.org/jgit/maven</url>
     </repository>
   </repositories>
 
   <pluginRepositories>
     <pluginRepository>
       <id>repo.jenkins-ci.org</id>
-      <url>http://repo.jenkins-ci.org/public/</url>
+      <url>https://repo.jenkins-ci.org/public/</url>
     </pluginRepository>
   </pluginRepositories>
 
